[metadata]
name = regent
description = Framework to allow untrusted users to perform privileged system tasks.
long_description = file: README.rst
keywords = sudo
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
url = https://radiac.net/projects/regent/
project_urls =
    Documentation = https://radiac.net/projects/regent/documentation/
    Source = https://github.com/radiac/regent
    Tracker = https://github.com/radiac/regent/issues

[options]
python_requires = >=3.6
packages = find:
install_requires =
include_package_data = true
zip_safe = false

[options.packages.find]
exclude =
    tests*
    docs*

[tool:pytest]
python_paths = .
testpaths = regent tests examples
addopts = --black --isort --flake8 --cov=regent --cov-report=term --cov-report=html
django_find_project = false

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .git,__pycache__,build,dist,.tox

[isort]
multi_line_output = 3
line_length = 88
known_first_party = regent
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
